Fix visibility of view component

--- a/frontend/src/app/components/publications/publication-view/publication-view.component.scss
+++ b/frontend/src/app/components/publications/publication-view/publication-view.component.scss
@@ -9,3 +9,7 @@
     justify-content: center;
     width: 60px;
 }
+
+.container {
+    width: 100%;
+}
